--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
 <body onload="loading()">
 
-<!-- <div id="load">
+<div id="load">
 	<h1>Loading</h1>
 	<object class="loading-a" type="image/svg+xml" data="images/loading-a.svg"></object>
-</div> -->
+</div>
 
 <div class="navigation">
 
